--- a/src/components/styles/User.css
+++ b/src/components/styles/User.css
@@ -4,25 +4,74 @@
   justify-content: center; /* This will center the cards in the container */
   padding: 20px;
   gap: 20px;
+  margin-top: 2rem;
 }
+
+/* src/components/UserCard.css */
 
 .user-card {
-  width: 250px; /* Fixed width for each card */
+  background-color: var(--card-bg-color);
+  width: 250px;
+  color: var(--text-color);
+  border-radius: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  padding: 20px;
+  overflow: hidden;
+  text-align: center;
   margin: 10px;
-  background-color: var(--card-background);
-  border-radius: 5px;
-  transition: transform 0.2s;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
+  min-height: 350px;
 }
 
-.user-card:hover {
-  transform: scale(1.05);
+.user-image-container {
+  /* background-color: var(--button-bg-color); */
+  padding: 20px;
+  border-radius: 50%;
+  /* width: 50px;
+  height: 50px; */
+  border-style: solid;
+  border-width: 1px;
+  border-color: var(--button-bg-color);
+  margin: 0 auto;
+}
+
+.user-image {
+  width: 100;
+  height: 100;
+  object-fit: "cover";
 }
 
 .user-info {
-  text-align: center;
+  padding: 20px;
+  flex-grow: 1; /* Ensures that this part expands to fill the space */
+}
+
+.user-name {
+  margin-top: 20px; /* Adjust if necessary */
+  font-size: 1rem;
+}
+
+.user-description {
+  font-size: 0.9rem;
+  color: var(--text-color);
+  overflow: hidden; /* Prevents text from spilling out */
+}
+
+button {
+  background-color: var(--button-bg-color);
+  color: var(--button-text-color);
+  border: none;
+  border-radius: 10px;
+  padding: 10px 20px;
+  margin-top: auto;
+  margin-bottom: 1.5rem;
+  margin-left: auto;
+  margin-right: auto;
+  width: 200px;
+  cursor: pointer;
+}
+
+.view-more-button:hover {
+  background-color: #0056b3;
 }
