--- a/src/components/styles/User.css
+++ b/src/components/styles/User.css
@@ -7,11 +7,28 @@
   margin-top: 2rem;
 }
 
-/* src/components/UserCard.css */
+.loading-spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  border-top: 4px solid #007bff;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+  margin: 100px auto;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 
 .user-card {
   background-color: var(--card-bg-color);
-  width: 250px;
+  width: 300px;
   color: var(--text-color);
   border-radius: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
